@@ -2,7 +2,9 @@
 	* app/gui.c: Loading files with non-ASCII names from the command
 	line is fixed;
 	* app/sample-editor.c, app/sample-dialog.c: deprecated
-	gtk_label_st is replaced by gtk_label_set_text.
+	gtk_label_st is replaced by gtk_label_set_text;
+	* app/extspinbutton.[ch]: deprecated Gdk function is replaced by
+	that from Pango, plus some code optimization.
 
 2018-09-06  Yury Aliaev  <mutab0r@rambler.ru>
 	* app/file-operations.[ch]: File interface was rewritten almost
